--- a/style.css
+++ b/style.css
@@ -59,18 +59,19 @@ nav a{
     font-family: Arial, Helvetica, sans-serif;
 }
 nav a:hover{
-    color: rgb(0, 90, 20);
+    transform: rotateY('angle');
 }
 
 nav a::after{
     content: "";
-    background-color: rgb(0, 90, 20);
+    background-color: rgb(255, 255, 255);
     width: 0;
     transition: 1s;
     height: 3px;
     position: absolute;
     bottom: 0;
     left: 0;
+    
 
 
 }
